# No-Face-No-Case

./: .gitignore  NoFaceNoCase.spec  NoFaceNoCaseOneFile.spec  README.md  Readme.txt  build-windows.bat  console.txt  hook.py  icon.icns  main.py  main.spec  pyinstaller --onefile --noconsole --icon.ps1  pyproject.toml  requirements.txt  start-linux.sh  start-macos.command  start-windows.bat  version.txt
.github/workflows/: build-linux.yml  build-macos.yml  build-windows.yml  release.yml
no_face_no_case/: __init__.py  paths.py
no_face_no_case/app/: __init__.py  gui.py  splash.py  theme.py  widgets.py
no_face_no_case/core/: detection.py  effects.py  identity.py  models.py  motion.py  processor.py
no_face_no_case/infrastructure/: ffmpeg_bootstrap.py  media_io.py
