[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "no-face-no-case"
version = "2.0.0"
description = "Cross-platform media privacy planner for face pixelation and protected clear regions."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "ACME Prototypes" }]
dependencies = [
    "opencv-python>=4.9",
    "Pillow>=10.0",
    "onnxruntime>=1.17",
    "tkcalendar>=1.6",
    "ultralytics>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
    "pyinstaller>=6.0",
]

[project.scripts]
no-face-no-case = "main:main"

[tool.setuptools]
packages = ["no_face_no_case", "no_face_no_case.app", "no_face_no_case.core", "no_face_no_case.infrastructure"]

[tool.setuptools.package-data]
no_face_no_case = ["assets/*"]

[tool.ruff]
line-length = 120
target-version = "py310"
